--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -51,7 +51,7 @@
 					<div class="col-md-6 col-12 main_header_left">
 						<p>Welcome to Weather App</p>
 						<h1>Get Latest <span>Weather</span> Of Selected City</h1>
-						<a href="/weather"><button>Check Weather</button></a>
+						<a href="/weather"><button>Check Weather Status</button></a>
 					</div>
 					<!-- right side div -->
 					<div class="col-md-6 col-12 main_header_right">
