--- a/templates/views/weather.hbs
+++ b/templates/views/weather.hbs
@@ -91,7 +91,7 @@
             }
             else{
                 try{
-                    let url = `http://api.openweathermap.org/data/2.5/weather?q=${cityVal}&appid=e1cd2e7788fc7de91c7433af553a88d9`
+                    let url = 
                     const response = await fetch(url);
                     const data = await response.json()
                     const arrData = [data]
